# sure3d

./: CHANGELOG  CMakeLists.txt  ProjectHome.md  README.TXT
include/sure/: color_surflet.h  configuration.h  feature.h  histogram_emd.h  hue_descriptor.h  map2d.h  normal_histogram.h  octree_value.h  range_image.h  sure_estimator.h  surflet.h
include/sure/access/: point.h  region.h
include/sure/data/: map2d.h  typedef.h
include/sure/data/impl/: map2d.hpp  range_image.hpp
include/sure/descriptor/: lightness_descriptor.h  shape_descriptor.h
include/sure/impl/: histogram_emd.hpp  sure_estimator.hpp
include/sure/keypoints/: keypoint_calculation.h
include/sure/memory/: default_allocator.h  fixed_size_allocator_direct_access.h
include/sure/normal/: cross_product_histogram.h  normal.h  normal_histogram.h
include/sure/octree/: octree.h  octree_level_map.h  octree_node.h
include/sure/octreelib/algorithm/: downsample.h
include/sure/octreelib/spatialaggregate/: octree.hpp
include/sure/payload/: payload.h  payload_entropy.h  payload_normal.h
include/sure/payload_ts/: payload_normal.h  payload_xyzrgb.h
src/: test_sure.cpp
src/sure/: color_surflet.cpp  configuration.cpp  feature.cpp  histogram_base.cpp  histogram_emd.cpp  histogram_l2.cpp  hue_descriptor.cpp  map2d.cpp  normal_histogram.cpp  octree_value.cpp  point_feature_descriptor.cpp  sure_estimator.cpp  surflet.cpp
src/sure/data/: configuration.cpp  map2d.cpp  typedef.cpp
src/sure/descriptor/: color_descriptor.cpp  descriptor.cpp  lightness_descriptor.cpp  shape_descriptor.cpp
src/sure/feature/: feature.cpp
src/sure/memory/: fixed_size_allocator_direct_access.cpp
src/sure/normal/: base_histogram.cpp  normal.cpp  normal_estimation.cpp
src/sure/octree/: octree.cpp  octree_level_map.cpp  octree_node_list.cpp
src/sure/payload/: payload.cpp  payload_cross_product.cpp
src/sure/payload_ts/: payload_xyzrgb.cpp
tags/version-0.2.7/: CHANGELOG  CMakeLists.txt  LICENCE
tags/version-0.2.7/include/sure/: color_surflet.h  configuration.h  histogram_base.h  histogram_l2.h  hue_descriptor.h  map2d.h  octree_value.h  point_feature_descriptor.h  sure_estimator.h
tags/version-0.2.7/include/sure/impl/: histogram_emd.hpp  range_image.hpp
tags/version-0.2.7/src/sure/: feature.cpp  histogram_emd.cpp  histogram_l2.cpp  hue_descriptor.cpp  lightness_descriptor.cpp  map2d.cpp  normal_histogram.cpp  point_feature_descriptor.cpp  range_image.cpp  sure_estimator.cpp  surflet.cpp
trunk/: CHANGELOG  CMakeLists.txt  LICENCE  README.TXT
trunk/include/sure/: configuration.h  feature.h  histogram_base.h  histogram_emd.h  histogram_l2.h  lightness_descriptor.h  normal_histogram_allocator.h  octree_value.h  point_feature_descriptor.h  range_image.h  sure.h  sure_estimator.h  surflet.h
trunk/include/sure/data/: configuration.h  range_image.h  typedef.h
trunk/include/sure/descriptor/: color_descriptor.h  descriptor.h  histogram.h  lightness_descriptor.h  shape_descriptor.h
trunk/include/sure/descriptor/impl/: histogram.hpp
trunk/include/sure/feature/: feature.h  feature_extraction.h
trunk/include/sure/impl/: histogram_emd.hpp  map2d.hpp  range_image.hpp  sure_estimator.hpp
trunk/include/sure/memory/: fixed_size_allocator.h
trunk/include/sure/normal/: base_histogram.h  normal_estimation.h
trunk/include/sure/normal/impl/: base_histogram.hpp
trunk/include/sure/octree/: octree_node_list.h  requirements
trunk/include/sure/octree/impl/: octree.hpp  octree_node.hpp
trunk/include/sure/octreelib/algorithm/: downsample.hpp
trunk/include/sure/octreelib/spatialaggregate/: octree.h
trunk/include/sure/payload/: payload_cross_product.h  payload_xyzrgb.h
trunk/include/sure/payload_ts/: payload.h  payload_xyzrgb_mathlib.h
trunk/src/: example.cpp  test_sure.cpp
trunk/src/sure/: color_surflet.cpp  configuration.cpp  feature.cpp  histogram_base.cpp  histogram_emd.cpp  lightness_descriptor.cpp  normal_histogram.cpp  normal_histogram_allocator.cpp  octree_value.cpp  point_feature_descriptor.cpp  range_image.cpp  sure.cpp  surflet.cpp
trunk/src/sure/access/: point.cpp  region.cpp
trunk/src/sure/data/: range_image.cpp
trunk/src/sure/descriptor/: histogram.cpp  shape_descriptor.cpp
trunk/src/sure/feature/: feature.cpp  feature_extraction.cpp
trunk/src/sure/keypoints/: keypoint_calculation.cpp
trunk/src/sure/memory/: fixed_size_allocator.cpp
trunk/src/sure/normal/: cross_product_histogram.cpp  normal_histogram.cpp
trunk/src/sure/octree/: octree_node.cpp
trunk/src/sure/payload/: payload_entropy.cpp  payload_normal.cpp  payload_xyzrgb.cpp
trunk/src/sure/payload_ts/: payload.cpp  payload_normal.cpp
